# claude-automation

./: .gitignore  NEXT_STEPS.md.obsolete  QUICKSTART-WEBSOCKET.md  QUICK_REFERENCE.md  README.md  SETUP_AS_SUBMODULE.md  init.sh
docs/: agent-communication.md.obsolete  architecture.md  usage-guide.md.obsolete  websocket-auto-input-architecture.md  websocket-comparison.md
examples/: README.md  example-workflow-api-refactor.json  example-workflow-auth.json  example-workflow-bug-fix.json  example-workflow-simple-calculator.json
rust-injector/: ARCHITECTURE.md.obsolete  AUTONOMOUS-AGENT-BEHAVIOR.md.obsolete  CCLAUDE-LAUNCHER.md.obsolete  CHANGELOG-CCLAUDE-RS.md.obsolete  CLAUDE-MD-AGENT-CLARIFICATION.md.obsolete  CLI-USAGE.md.obsolete  Cargo.toml  FIX-CCLAUDE-AGENT-ENV.md.obsolete  FIX-PROMPT-INJECTION-TIMING.md.obsolete  ORCHESTRATION-CLI.md.obsolete  QUICK-START.md.obsolete  QUICKSTART.md.obsolete  README.md  SESSION-MAPPING.md.obsolete  SYSTEM-OVERVIEW.md.obsolete  build.sh  test-cclaude-rs.sh  verify-enter.sh
rust-injector/examples/: ioctl_inject.rs  pty_demo.rs  simple_injection.rs  verify_injection.rs
rust-injector/src/: detector.rs  injector.rs  lib.rs  main.rs  payload.rs  pty_injector.rs  session.rs  session_mapper.rs  tmux_spawner.rs  worker_registry.rs
scripts/: README.md.obsolete  agent_prompts_with_knowledge.sh  autonomous_orchestrator.sh  demo_agent_communication.sh.obsolete  shared_knowledge_manager.sh.obsolete  start-websocket-coordinator.sh  start_autonomous_workflow.sh.obsolete
tests/: test_autonomous_system.sh
(+2 files in other folders)
