[package]
name = "claude-session-injector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"

[lib]
name = "claude_injector"
path = "src/lib.rs"

[[bin]]
name = "claude-injector"
path = "src/main.rs"

[[bin]]
name = "claude-inject"
path = "src/bin/claude-inject.rs"

[[bin]]
name = "cclaude-rs"
path = "src/bin/cclaude-rs.rs"
